# jiji

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: index.md  workflow.md
docs/deep-dives/: git-workflow.md  locking.md  paths.md  storage.md
src/: add.rs  cache.rs  configuration.rs  find_root.rs  gc.rs  gitignore.rs  hashing.rs  index.rs  init.rs  lib.rs  locking.rs  reference_file.rs  relative_path.rs  restore.rs  status.rs  storage.rs  test_utils.rs  untrack.rs  with_added_extension.rs
src/storage/: path.rs  sftp.rs
tests/: locking_cli.rs  smoke_cli.rs
