[package]
name = "jiji"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.8.4", features = ["serde"] }
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
fs2 = "0.4.3"
indicatif = "0.18.4"
itertools = "0.14.0"
pathdiff = { version = "0.2.3", features = ["camino"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
ssh2 = "0.9.5"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
whoami = "2.1.1"

[dev-dependencies]
tempfile = "3.27.0"
